--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script type="module" src="/src/main.tsx"></script>
     <script>
       (function(d,t) {
-        var BASE_URL="http://35.209.218.178:3000";
+        var BASE_URL="https://35-209-218-178.sslip.io";
         var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
         g.src=BASE_URL+"/packs/js/sdk.js";
         g.defer = true;
